--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,43 @@
+beautifulsoup4==4.9.3
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
+cx-Freeze==6.5.3
+docopt==0.6.2
 idna==2.10
+importlib-metadata==3.4.0
+Js2Py==0.70
 MouseInfo==0.1.3
 numpy==1.20.1
+oc==0.2.1
 opencv-python==4.5.1.48
+packaging==20.9
+pexpect==4.8.0
 Pillow==8.1.0
+pipwin==0.5.1
+ptyprocess==0.7.0
+PyAudio @ file:///C:/Users/User/pipwin/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
+PyAudio==0.2.11
 PyAutoGUI==0.9.52
+pycparser==2.20
 PyGetWindow==0.0.9
+pyjsparser==2.7.1
 PyMsgBox==1.0.9
+pynput==1.7.3
+pyparsing==2.4.7
 pyperclip==1.8.1
+PyPrind==2.11.2
 PyRect==0.1.4
 PyScreeze==0.1.26
+pySmartDL==1.3.4
 pyTelegramBotAPI==3.7.6
 PyTweening==1.0.3
+pytz==2021.1
 requests==2.25.1
+scipy==1.6.1
+six==1.15.0
+sounddevice==0.4.1
+soupsieve==2.2
+tzlocal==2.1
 urllib3==1.26.3
+zipp==3.4.0
